[package]
name = "asr-debugger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byte-unit = "4.0.19"
eframe = "0.23.0"
egui_dock = "0.8.0"
egui_file = "0.11.0"
egui_plot = "0.23.0"
hdrhistogram = { version = "7.5.2", default-features = false }
indexmap = "2.0.0"
livesplit-auto-splitting = { git = "https://github.com/LiveSplit/livesplit-core" }

[patch.crates-io]
read-process-memory = { git = "https://github.com/CryZe/read-process-memory", branch = "asr-debugger" }
