[package]
name = "asr-debugger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
arc-swap = "1.6.0"
atomic = "0.6.0"
bstr = "1.8.0"
byte-unit = "5.0.3"
clap = { version = "4.4.6", default-features = false, features = ["derive", "std"] }
eframe = "0.28.1"
egui_dock = "0.13.0"
egui_file = "0.18.0"
egui_plot = "0.28.1"
hdrhistogram = { version = "7.5.2", default-features = false }
indexmap = "2.0.0"
livesplit-auto-splitting = { git = "https://github.com/LiveSplit/livesplit-core", features = ["debugger-support"] }
mime_guess = "2.0.4"

[profile.max-opt]
inherits = "release"
lto = true
strip = true
panic = "abort"
codegen-units = 1

[profile.max-opt.build-override]
opt-level = 0
